test/e2e/tests/vpc-connectivity/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-e2e-connectivity
