test/e2e/tests/vpc-connectivity/vpc.yaml
apiVersion: galactic.datumapis.com/v1alpha
kind: VPC
metadata:
  name: main
  namespace: test-e2e-connectivity
spec:
  networks:
    - 10.1.1.0/24
    - 2001:10:1:1::/64
---
apiVersion: galactic.datumapis.com/v1alpha
kind: VPCAttachment
metadata:
  name: region1
  namespace: test-e2e-connectivity
spec:
  interface:
    addresses:
      - 10.1.1.1/24
      - 2001:10:1:1::1/64
    name: main-vpc
  routes:
    - destination: 192.168.1.0/24
      via: 10.1.1.1
    - destination: 2001:1::/64
      via: 2001:10:1:1::1
    - destination: 192.168.2.0/24
      via: 10.1.1.3
    - destination: 2001:2::/64
      via: 2001:10:1:1::3
  vpc:
    apiVersion: galactic.datumapis.com/v1alpha
    kind: VPC
    name: main
    namespace: test-e2e-connectivity
---
apiVersion: galactic.datumapis.com/v1alpha
kind: VPCAttachment
metadata:
  name: region2
  namespace: test-e2e-connectivity
spec:
  interface:
    addresses:
      - 10.1.1.2/24
      - 2001:10:1:1::2/64
    name: main-vpc
  routes:
    - destination: 192.168.1.0/24
      via: 10.1.1.1
    - destination: 2001:1::/64
      via: 2001:10:1:1::1
    - destination: 192.168.2.0/24
      via: 10.1.1.3
    - destination: 2001:2::/64
      via: 2001:10:1:1::3
  vpc:
    apiVersion: galactic.datumapis.com/v1alpha
    kind: VPC
    name: main
    namespace: test-e2e-connectivity
---
apiVersion: galactic.datumapis.com/v1alpha
kind: VPCAttachment
metadata:
  name: region3
  namespace: test-e2e-connectivity
spec:
  interface:
    addresses:
      - 10.1.1.3/24
      - 2001:10:1:1::3/64
    name: main-vpc
  routes:
    - destination: 192.168.1.0/24
      via: 10.1.1.1
    - destination: 2001:1::/64
      via: 2001:10:1:1::1
    - destination: 192.168.2.0/24
      via: 10.1.1.3
    - destination: 2001:2::/64
      via: 2001:10:1:1::3
  vpc:
    apiVersion: galactic.datumapis.com/v1alpha
    kind: VPC
    name: main
    namespace: test-e2e-connectivity
